--- a/DecAntique/DecAntique/Base.lproj/LaunchScreen.storyboard
+++ b/DecAntique/DecAntique/Base.lproj/LaunchScreen.storyboard
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="dark"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="i0z-wf-Rbh">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -12,25 +11,30 @@
         <scene sceneID="FGp-RH-SOR">
             <objects>
                 <viewController id="i0z-wf-Rbh" sceneMemberID="viewController">
-                    <view key="view" alpha="0.5" contentMode="scaleToFill" id="FC4-dE-WaS">
+                    <view key="view" contentMode="scaleToFill" id="FC4-dE-WaS">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BackGroundLuanch" translatesAutoresizingMaskIntoConstraints="NO" id="Cld-y1-7id">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.40000000000000002" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BackGroundDarkMode" translatesAutoresizingMaskIntoConstraints="NO" id="Cld-y1-7id">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="udq-n4-EEz">
-                                <rect key="frame" x="41" y="199" width="333" height="427"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="udq-n4-EEz">
+                                <rect key="frame" x="20.5" y="334" width="373" height="228"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="udq-n4-EEz" secondAttribute="height" multiplier="307:188" id="BCZ-Vk-nOP"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="pfg-bY-7hK"/>
-                        <color key="backgroundColor" systemColor="labelColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="pfg-bY-7hK" firstAttribute="trailing" secondItem="Cld-y1-7id" secondAttribute="trailing" id="3o6-0i-jMF"/>
-                            <constraint firstAttribute="bottom" secondItem="Cld-y1-7id" secondAttribute="bottom" id="Dtt-IE-x2I"/>
-                            <constraint firstItem="Cld-y1-7id" firstAttribute="leading" secondItem="pfg-bY-7hK" secondAttribute="leading" id="SQM-No-cbD"/>
-                            <constraint firstItem="Cld-y1-7id" firstAttribute="top" secondItem="FC4-dE-WaS" secondAttribute="top" id="h6b-NY-YN5"/>
+                            <constraint firstItem="udq-n4-EEz" firstAttribute="width" secondItem="FC4-dE-WaS" secondAttribute="width" multiplier="0.9" id="MiS-hg-0iT"/>
+                            <constraint firstItem="Cld-y1-7id" firstAttribute="top" secondItem="FC4-dE-WaS" secondAttribute="top" id="RYB-Ue-GD2"/>
+                            <constraint firstItem="Cld-y1-7id" firstAttribute="leading" secondItem="pfg-bY-7hK" secondAttribute="leading" id="SAF-Dw-Ci9"/>
+                            <constraint firstItem="Cld-y1-7id" firstAttribute="trailing" secondItem="pfg-bY-7hK" secondAttribute="trailing" id="Z2U-IR-cbG"/>
+                            <constraint firstItem="udq-n4-EEz" firstAttribute="centerX" secondItem="FC4-dE-WaS" secondAttribute="centerX" id="oG0-kO-nzP"/>
+                            <constraint firstItem="udq-n4-EEz" firstAttribute="centerY" secondItem="FC4-dE-WaS" secondAttribute="centerY" id="tYI-MR-xBH"/>
+                            <constraint firstAttribute="bottom" secondItem="Cld-y1-7id" secondAttribute="bottom" id="zmI-1i-0O1"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -40,10 +44,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="BackGroundLuanch" width="564" height="689"/>
+        <image name="BackGroundDarkMode" width="564" height="845"/>
         <image name="Logo" width="614" height="376"/>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
