--- a/MY_Second_Project/MY_Second_Project/Base.lproj/Main.storyboard
+++ b/MY_Second_Project/MY_Second_Project/Base.lproj/Main.storyboard
@@ -174,6 +174,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="WAa-iD-faj"/>
+                    <connections>
+                        <segue destination="mfG-kc-qoq" kind="show" id="swD-ww-b8E"/>
+                        <segue destination="emw-tR-cM5" kind="show" id="V0d-Kp-40Q"/>
+                        <segue destination="HZV-jr-776" kind="show" id="6ME-Wa-rxD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kos-16-Jkk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -201,7 +206,7 @@
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4xf-2b-8AK">
                                                     <rect key="frame" x="20" y="25" width="50" height="50"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" secondItem="4xf-2b-8AK" secondAttribute="height" multiplier="1:1" id="FXv-9t-di4"/>
+                                                        <constraint firstAttribute="width" secondItem="4xf-2b-8AK" secondAttribute="height" multiplier="1:1" id="Wx7-Ub-8IL"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UPu-mC-5oA">
@@ -211,45 +216,47 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ml" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7vG-w9-hA8">
-                                                    <rect key="frame" x="78" y="39.5" width="281" height="21"/>
+                                                    <rect key="frame" x="78" y="39.5" width="273" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JBx-cJ-zCV">
-                                                    <rect key="frame" x="78" y="68" width="281" height="21"/>
+                                                    <rect key="frame" x="78" y="68" width="273" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZoF-g0-3ul">
-                                                    <rect key="frame" x="367" y="32.5" width="35" height="35"/>
+                                                    <rect key="frame" x="359" y="32.5" width="35" height="35"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" secondItem="ZoF-g0-3ul" secondAttribute="height" multiplier="1:1" id="IsA-Y1-eLQ"/>
+                                                        <constraint firstAttribute="width" secondItem="ZoF-g0-3ul" secondAttribute="height" multiplier="1:1" id="vjo-n0-uy6"/>
                                                     </constraints>
+                                                    <color key="tintColor" red="0.030565399480000002" green="0.030565399480000002" blue="0.030565399480000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="filled" title="Add to Cart"/>
                                                     <connections>
                                                         <action selector="addToCart:" destination="mfG-kc-qoq" eventType="touchUpInside" id="aTC-bS-5xf"/>
+                                                        <action selector="addToCartButt:" destination="vaK-sd-Vyw" eventType="touchUpInside" id="mAB-hV-EpJ"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="7vG-w9-hA8" firstAttribute="centerY" secondItem="h0J-WW-fJj" secondAttribute="centerY" id="Aio-Nw-u9T"/>
-                                                <constraint firstItem="4xf-2b-8AK" firstAttribute="height" secondItem="h0J-WW-fJj" secondAttribute="height" multiplier="0.5" id="BfO-QW-bJd"/>
-                                                <constraint firstItem="7vG-w9-hA8" firstAttribute="top" secondItem="UPu-mC-5oA" secondAttribute="bottom" constant="7.5" id="E3G-gA-Gmz"/>
-                                                <constraint firstItem="7vG-w9-hA8" firstAttribute="leading" secondItem="4xf-2b-8AK" secondAttribute="trailing" constant="8" id="Og5-0C-0P7"/>
-                                                <constraint firstItem="ZoF-g0-3ul" firstAttribute="height" secondItem="h0J-WW-fJj" secondAttribute="height" multiplier="0.35" id="Sgi-72-tiA"/>
-                                                <constraint firstItem="UPu-mC-5oA" firstAttribute="trailing" secondItem="7vG-w9-hA8" secondAttribute="trailing" constant="-8" id="VtE-9a-jex"/>
-                                                <constraint firstItem="JBx-cJ-zCV" firstAttribute="top" secondItem="7vG-w9-hA8" secondAttribute="bottom" constant="7.5" id="amQ-Bv-ae0"/>
-                                                <constraint firstItem="ZoF-g0-3ul" firstAttribute="trailing" secondItem="h0J-WW-fJj" secondAttribute="trailingMargin" constant="8" id="bed-GC-0mw"/>
-                                                <constraint firstItem="JBx-cJ-zCV" firstAttribute="leading" secondItem="7vG-w9-hA8" secondAttribute="leading" id="c9X-oi-0pL"/>
-                                                <constraint firstItem="JBx-cJ-zCV" firstAttribute="trailing" secondItem="7vG-w9-hA8" secondAttribute="trailing" id="cvH-Bu-hy0"/>
-                                                <constraint firstItem="4xf-2b-8AK" firstAttribute="centerY" secondItem="h0J-WW-fJj" secondAttribute="centerY" id="edE-gB-Ej2"/>
-                                                <constraint firstItem="ZoF-g0-3ul" firstAttribute="leading" secondItem="7vG-w9-hA8" secondAttribute="trailing" constant="8" id="exf-VI-n1l"/>
-                                                <constraint firstItem="4xf-2b-8AK" firstAttribute="leading" secondItem="h0J-WW-fJj" secondAttribute="leadingMargin" id="fbo-1f-hie"/>
-                                                <constraint firstItem="UPu-mC-5oA" firstAttribute="leading" secondItem="7vG-w9-hA8" secondAttribute="leading" id="jwu-Yn-qMw"/>
-                                                <constraint firstItem="ZoF-g0-3ul" firstAttribute="centerY" secondItem="h0J-WW-fJj" secondAttribute="centerY" id="sg1-9Q-I3N"/>
+                                                <constraint firstItem="JBx-cJ-zCV" firstAttribute="leading" secondItem="7vG-w9-hA8" secondAttribute="leading" id="2V4-pr-VnL"/>
+                                                <constraint firstItem="ZoF-g0-3ul" firstAttribute="leading" secondItem="7vG-w9-hA8" secondAttribute="trailing" constant="8" id="AOW-SU-EIT"/>
+                                                <constraint firstItem="UPu-mC-5oA" firstAttribute="leading" secondItem="7vG-w9-hA8" secondAttribute="leading" id="Dyv-Dd-Zdh"/>
+                                                <constraint firstItem="7vG-w9-hA8" firstAttribute="leading" secondItem="4xf-2b-8AK" secondAttribute="trailing" constant="8" id="MUr-jx-ziT"/>
+                                                <constraint firstItem="JBx-cJ-zCV" firstAttribute="top" secondItem="7vG-w9-hA8" secondAttribute="bottom" constant="7.5" id="Ofm-3S-Ybg"/>
+                                                <constraint firstItem="ZoF-g0-3ul" firstAttribute="height" secondItem="h0J-WW-fJj" secondAttribute="height" multiplier="0.35" id="PIE-af-m0s"/>
+                                                <constraint firstItem="UPu-mC-5oA" firstAttribute="trailing" secondItem="7vG-w9-hA8" secondAttribute="trailing" id="Ufi-ZA-Z1R"/>
+                                                <constraint firstItem="4xf-2b-8AK" firstAttribute="leading" secondItem="h0J-WW-fJj" secondAttribute="leadingMargin" id="ZXz-8W-sI7"/>
+                                                <constraint firstItem="ZoF-g0-3ul" firstAttribute="centerY" secondItem="h0J-WW-fJj" secondAttribute="centerY" id="baa-Sf-WlU"/>
+                                                <constraint firstItem="7vG-w9-hA8" firstAttribute="centerY" secondItem="h0J-WW-fJj" secondAttribute="centerY" id="djE-Jt-Djc"/>
+                                                <constraint firstItem="ZoF-g0-3ul" firstAttribute="trailing" secondItem="h0J-WW-fJj" secondAttribute="trailingMargin" id="kLf-FR-iOR"/>
+                                                <constraint firstItem="4xf-2b-8AK" firstAttribute="centerY" secondItem="h0J-WW-fJj" secondAttribute="centerY" id="m7r-Nn-OMR"/>
+                                                <constraint firstItem="JBx-cJ-zCV" firstAttribute="trailing" secondItem="7vG-w9-hA8" secondAttribute="trailing" id="ovU-nk-JjJ"/>
+                                                <constraint firstItem="7vG-w9-hA8" firstAttribute="top" secondItem="UPu-mC-5oA" secondAttribute="bottom" constant="7.5" id="rd1-ub-sJw"/>
+                                                <constraint firstItem="4xf-2b-8AK" firstAttribute="height" secondItem="h0J-WW-fJj" secondAttribute="height" multiplier="0.5" id="ret-3o-gcs"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -346,6 +353,7 @@
                                                             <state key="normal" title="Button"/>
                                                             <buttonConfiguration key="configuration" style="filled" title="Add to Cart"/>
                                                             <connections>
+                                                                <action selector="addToCartButt:" destination="WsI-H1-yyx" eventType="touchUpInside" id="0tD-WW-k3r"/>
                                                                 <action selector="addToCartButt:" destination="emw-tR-cM5" eventType="touchUpInside" id="TYi-Xr-OSn"/>
                                                             </connections>
                                                         </button>
@@ -707,6 +715,11 @@
             <point key="canvasLocation" x="877" y="1861"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="6ME-Wa-rxD"/>
+        <segue reference="V0d-Kp-40Q"/>
+        <segue reference="swD-ww-b8E"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="cart" catalog="system" width="128" height="102"/>
         <image name="categorie" width="3000" height="1168"/>
