--- a/PROJECT-2/PROJECT-2/Base.lproj/Main.storyboard
+++ b/PROJECT-2/PROJECT-2/Base.lproj/Main.storyboard
@@ -310,10 +310,35 @@
                                             </constraints>
                                         </imageView>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="zWD-bd-Hzp">
-                                            <rect key="frame" x="138" y="43.5" width="256" height="70"/>
+                                            <rect key="frame" x="30" y="157" width="354" height="166"/>
                                             <subviews>
+                                                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="lNa-F9-0Jx">
+                                                    <rect key="frame" x="0.0" y="0.0" width="354" height="32"/>
+                                                    <segments>
+                                                        <segment title=""/>
+                                                        <segment title=""/>
+                                                        <segment title=""/>
+                                                        <segment title=""/>
+                                                        <segment title=""/>
+                                                    </segments>
+                                                    <connections>
+                                                        <action selector="changeColorProduct:" destination="CcR-An-NbY" eventType="valueChanged" id="gJJ-V6-PUi"/>
+                                                    </connections>
+                                                </segmentedControl>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ePm-61-Uwo">
+                                                    <rect key="frame" x="0.0" y="39" width="354" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hNl-VO-Jfc">
+                                                    <rect key="frame" x="0.0" y="67.5" width="354" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Swg-4B-TKI">
-                                                    <rect key="frame" x="0.0" y="0.0" width="256" height="32"/>
+                                                    <rect key="frame" x="0.0" y="96" width="354" height="32"/>
                                                     <segments>
                                                         <segment title=""/>
                                                         <segment title=""/>
@@ -323,33 +348,53 @@
                                                     </segments>
                                                 </segmentedControl>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D6t-CE-5e8">
-                                                    <rect key="frame" x="0.0" y="39" width="256" height="31"/>
+                                                    <rect key="frame" x="0.0" y="135" width="354" height="31"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="filled" title="Add To Cart"/>
                                                 </button>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ePm-61-Uwo" firstAttribute="top" secondItem="lNa-F9-0Jx" secondAttribute="bottom" constant="8" symbolic="YES" id="6ET-MO-Y7E"/>
+                                                <constraint firstItem="ePm-61-Uwo" firstAttribute="leading" secondItem="zWD-bd-Hzp" secondAttribute="leading" id="wsS-PD-Tag"/>
+                                            </constraints>
                                         </stackView>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vSD-Ut-LLf">
+                                            <rect key="frame" x="285" y="11" width="109" height="112"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="112" id="6nP-nb-Lnb"/>
+                                                <constraint firstAttribute="width" constant="109" id="bQ3-KC-QIh"/>
+                                            </constraints>
+                                        </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lHm-M5-5d2">
-                                            <rect key="frame" x="138" y="11" width="41.5" height="20.5"/>
+                                            <rect key="frame" x="134" y="25" width="41.5" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="zWD-bd-Hzp" firstAttribute="leading" secondItem="J6w-wn-IQs" secondAttribute="trailing" constant="8" symbolic="YES" id="9IK-M0-JNK"/>
-                                        <constraint firstAttribute="trailing" secondItem="zWD-bd-Hzp" secondAttribute="trailing" constant="20" id="Cnn-1n-1WZ"/>
+                                        <constraint firstItem="lHm-M5-5d2" firstAttribute="top" secondItem="AGh-2a-3q6" secondAttribute="topMargin" constant="14" id="4Lc-53-hSc"/>
                                         <constraint firstItem="J6w-wn-IQs" firstAttribute="leading" secondItem="AGh-2a-3q6" secondAttribute="leading" constant="21" id="IGP-H7-8X9"/>
-                                        <constraint firstItem="lHm-M5-5d2" firstAttribute="top" secondItem="AGh-2a-3q6" secondAttribute="topMargin" id="XAf-6R-Syi"/>
+                                        <constraint firstItem="zWD-bd-Hzp" firstAttribute="leading" secondItem="AGh-2a-3q6" secondAttribute="leadingMargin" constant="10" id="Npk-5r-xZ9"/>
+                                        <constraint firstItem="vSD-Ut-LLf" firstAttribute="trailing" secondItem="AGh-2a-3q6" secondAttribute="trailingMargin" id="QUS-ye-WTw"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="zWD-bd-Hzp" secondAttribute="bottom" constant="24" id="SYk-O2-OJy"/>
                                         <constraint firstItem="J6w-wn-IQs" firstAttribute="top" secondItem="AGh-2a-3q6" secondAttribute="top" constant="8" id="XRv-Rw-kpd"/>
-                                        <constraint firstItem="zWD-bd-Hzp" firstAttribute="top" secondItem="lHm-M5-5d2" secondAttribute="bottom" constant="12" id="eAl-3d-0Mw"/>
-                                        <constraint firstItem="lHm-M5-5d2" firstAttribute="leading" secondItem="J6w-wn-IQs" secondAttribute="trailing" constant="8" symbolic="YES" id="hTR-Zw-Xra"/>
+                                        <constraint firstItem="J6w-wn-IQs" firstAttribute="top" secondItem="AGh-2a-3q6" secondAttribute="topMargin" constant="-3" id="Yfg-4t-E1y"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="J6w-wn-IQs" secondAttribute="bottom" constant="227" id="dgH-Ym-nHu"/>
+                                        <constraint firstItem="J6w-wn-IQs" firstAttribute="leading" secondItem="AGh-2a-3q6" secondAttribute="leadingMargin" constant="1" id="fsm-s0-Xed"/>
+                                        <constraint firstItem="vSD-Ut-LLf" firstAttribute="top" secondItem="AGh-2a-3q6" secondAttribute="topMargin" id="kD7-tt-rh8"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="zWD-bd-Hzp" secondAttribute="trailing" constant="10" id="s10-JU-7Mm"/>
+                                        <constraint firstItem="lHm-M5-5d2" firstAttribute="leading" secondItem="J6w-wn-IQs" secondAttribute="trailing" constant="4" id="zyx-Bp-MwU"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="addCard" destination="D6t-CE-5e8" id="CvC-Kw-47S"/>
+                                    <outlet property="colorClothing" destination="lNa-F9-0Jx" id="Pqs-gL-ErA"/>
                                     <outlet property="nameClothing" destination="lHm-M5-5d2" id="mI2-6q-lXp"/>
+                                    <outlet property="priceClothing" destination="hNl-VO-Jfc" id="FzT-SQ-SZd"/>
+                                    <outlet property="productImage" destination="vSD-Ut-LLf" id="w7i-Nj-PpN"/>
                                     <outlet property="profileImage" destination="J6w-wn-IQs" id="qTL-34-UXD"/>
+                                    <outlet property="quantityProduct" destination="ePm-61-Uwo" id="utp-iH-Cdz"/>
                                     <outlet property="sizeClothing" destination="Swg-4B-TKI" id="3Oc-cl-CzR"/>
                                 </connections>
                             </tableViewCell>
